--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="logged-in">
           <a href="#" class="grey-text" id="logout">Logout</a>
         </li>
-        <li class="admin">
+        <li class="">
           <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
         </li>
         <li class="logged-out">
